force-app/main/default/objects/Appraisal_Nation_API__c/Appraisal_Nation_API__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Appraisal Nation API Settings</label>
</CustomObject>