force-app/main/default/objects/Appraisal_Nation_API__c/fields/Bridge_Password__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Password__c</fullName>
    <description>This is the password for the Bridge Appraisal Nation Account</description>
    <inlineHelpText>This is the password for the Bridge Appraisal Nation Account</inlineHelpText>
    <label>Bridge Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>