force-app/main/default/objects/Appraisal_Nation_API__c/fields/Bridge_Username__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Username__c</fullName>
    <description>This is the username for the Bridge Appraisal Nation Account</description>
    <inlineHelpText>This is the username for the Bridge Appraisal Nation Account</inlineHelpText>
    <label>Bridge Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>