force-app/main/default/objects/Appraisal_Nation_API__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>This is the password for the Term Appraisal Nation Account</description>
    <inlineHelpText>This is the password for the Term Appraisal Nation Account</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>