force-app/main/default/objects/Appraisal_Nation_API__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>This is the username for the Term Appraisal Nation Account</description>
    <inlineHelpText>This is the username for the Term Appraisal Nation Account</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>